workshop/envoyfilter/examples/istio/istio_rabbitmq_vservice.yaml
# Copyright 2018 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rabbitmq-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 5672
      name: amqp
      protocol: TCP
    hosts:
    - "*"
  - port:
      number: 5671
      name: amqps
      protocol: TLS
    tls:
      mode: PASSTHROUGH
      # mode: SIMPLE
      # credentialName: rabbitmq-bugs-tls
    hosts:
    - "*"
  - port:
      number: 15671
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
      # mode: SIMPLE
      # credentialName: rabbitmq-bugs-tls
    hosts:
      - "*"
    # - bugs.4messages.net
  - port:
      number: 15672
      name: http
      protocol: HTTP
    hosts:
    - "*"    
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-app-tcp
spec:
  hosts:
  - "*"
  gateways:
  - rabbitmq-app-gateway
  tcp:
  - match:
    - port: 5672
    route:
    - destination:
        host: filter
        port:
          number: 5672
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-app-tls
spec:
  hosts:
  - bugs.4messages.net
  gateways:
  - rabbitmq-app-gateway
  tcp:
  - match:
    - port: 5671
    route:
    - destination:
        host: filter
        port:
          number: 5671
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-app-https
spec:
  hosts:
  - bugs.4messages.net
  gateways:
  - rabbitmq-app-gateway
  http:
  - match:
    - port: 15671
    - uri:
        prefix: /
    route:
    - destination:
        host: filter
        port:
          number: 15671
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-app-http
spec:
  hosts:
  - "*"
  gateways:
  - rabbitmq-app-gateway
  http:
  - match:
    - port: 15672
    - uri:
        prefix: /
    route:
    - destination:
        host: filter
        port:
          number: 15672
